force-app/main/default/objects/Work_Hour__c/Work_Hour__c.object-meta.xml
<CustomObject>
    <label>Work Hour</label>
    <nameField>
        <label>Work_Hours Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Hours</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>