force-app/main/default/objects/Work_Hour__c/fields/OffLineMSG__c.field-meta.xml
<CustomField>
    <fullName>OffLineMSG__c</fullName>
    <inlineHelpText>下班時仍在等待的客戶會收到此訊息。</inlineHelpText>
    <label>下班訊息</label>
    <length>255</length>
    <type>Text</type>
</CustomField>