force-app/main/default/objects/Work_Hour__c/fields/SwitchToBotMSG__c.field-meta.xml
<CustomField>
    <fullName>SwitchToBotMSG__c</fullName>
    <label>離開真人客服訊息</label>
    <length>255</length>
    <type>Text</type>
</CustomField>