force-app/main/default/objects/Work_Hour__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Language__c</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Time__c</columns>
    <columns>SwitchToBotMSG__c</columns>
    <columns>OffLineMSG__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>